checked html and css and the footer

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                 <hr class="solid2">
                 
-                <fieldset>
+                <fieldset class="second">
             
                     <legend><span class="newsletter"></span>Newsletter</legend>
                     <p>Select the newsletters you would like to receive</p>
